Added CSS STYLE tag as per review

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>    
 <head>
+<STYLE>
+H1 {color:blue; font-size: 300%}
+P {color:blue}
+</STYLE>
   </head>
   
   <!-- please use css styling -->
+
   
   <body>
     </body>
