--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ P {color:blue}
   <body>
     </body>
 
-
+<H2>This is my 1st paragraph</H2>
+<H2>This is my 2nd paragraph</H2>
+<H2>This is my 3rd paragraph</H2>
 
 </html>
 
