--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <STYLE>
 H1 {color:blue; font-size: 300%}
+  H1 {color:red; font-size: 150%} <!-- added at remote -->
 P {color:blue}
 </STYLE>
   </head>
